Customization and something from FMPE.

--- a/Language/en-GB.yml
+++ b/Language/en-GB.yml
@@ -701,7 +701,7 @@ en-GB:
   STR_ALLOY_SWORD: "Alloy Sword"
   STR_ALLOY_SWORD_UFOPEDIA: "This specially crafted sword is a formidable close combat weapon, utilizing a soldier's strength and skill to take down even heavily armored foes.{NEWLINE}>Adds damage from Strength"
   STR_LIVING_QUARTERS_2: "Large Living Quarters"
-  STR_LIVING_QUARTERS_2_UFOPEDIA: "Meant for large bases, this facility is more cost-efficient than the standard Living Quarters, housing 200 personnel in considerable comfort as well as providing 50 storage space."
+  STR_LIVING_QUARTERS_2_UFOPEDIA: "Meant for large bases, this facility is more cost-efficient than the standard Living Quarters, housing 200 personnel with healthcare facility as well as providing 50 storage space."
   STR_GENERAL_STORES_2: "Large Storage Facility"
   STR_GENERAL_STORES_2_UFOPEDIA: "This facility is considerably more costly than the General Stores, but it provides better-structured storage space (capacity 275 units)."
   STR_HEAVY_TRANSPORTER: "Heavy Troop Transporter"
@@ -854,6 +854,7 @@ en-GB:
   STR_MIB_EXECUTOR: "MiB Demoman"
   STR_MIB_COORDINATOR: "MiB Coordinator"
   STR_MIB_COMMANDER: "MiB Commander"
+  STR_MIB_COMMANDER_CORPSE: "MiB Commander Corpse"
   STR_MIB_PSI_OPS: "MiB Psi-Ops"
   STR_MIBTANK_TERRORIST: "MiB Tank Terrorist"
   STR_MIB0_CORPSE: "MiB Agent Corpse"
